fix absence of cp files into terrafom folder

--- a/buildspec.yml
+++ b/buildspec.yml
@@ -11,6 +11,7 @@ phases:
       - PROJ_NAME="$PROJETCT_NAME"
       - REPOSITORY_URI="$ECR_ADDRESS"
       - mkdir terraform
+      - cp -rv $(pwd) terraform/
       - mkdir terraform/.aws && aws s3 cp s3://hackaton-fiap-1dvp-12345/instance-need/.aws/credentials terraform/.aws/ && aws s3 cp s3://hackaton-fiap-1dvp-12345/instance-need/.aws/config terraform/.aws/
       - mkdir terraform/.ssh && aws s3 cp s3://hackaton-fiap-1dvp-12345/instance-need/.ssh/fiap-lab.pem terraform/.ssh/ 
   pre_build:
@@ -22,6 +23,7 @@ phases:
     commands:
       - cd terraform
       - dockerterraform="docker run --rm -w /app  -v $PWD:/app -v $PWD/.aws:/root/.aws -v $PWD/.ssh:/root/.ssh -e PROJ_NAME=$PROJ_NAME $terraformImage"
+      - 
       - $dockerterraform init 
       - $dockerterraform workspace select $STAGE || $dockerterraform workspace new $STAGE
       - $dockerterraform destroy -var ECR_REGISTRY="${REPOSITORY_URI}" -auto-approve
