--- a/buildspec.yml
+++ b/buildspec.yml
@@ -23,7 +23,7 @@ phases:
       - $dockerterraform init 
       - $dockerterraform workspace select $STAGE || $dockerterraform workspace new $STAGE
       - $dockerterraform destroy -var ECR_REGISTRY="${REPOSITORY_URI}" -auto-approve
-      - $dockerterraform plan -var ECR_REGISTRY="${REPOSITORY_URI}"
+      - $dockerterraform plan -var ECR_REGISTRY="${REPOSITORY_URI}" -out plan.out
       - $dockerterraform apply -var ECR_REGISTRY="${REPOSITORY_URI}" -auto-approve
       - elb=$($dockerterraform output elb_public)
       - echo $elb >> elb.txt
@@ -34,3 +34,4 @@ phases:
 artifacts:
   files: 
     - elb.txt
+    - plan.out
