--- a/buildspec.yml
+++ b/buildspec.yml
@@ -23,8 +23,8 @@ phases:
       - $dockerterraform init 
       - $dockerterraform workspace select $STAGE || $dockerterraform workspace new $STAGE
       - $dockerterraform destroy -var ECR_REGISTRY="${REPOSITORY_URI}" -auto-approve
-      - $dockerterraform plan -var ECR_REGISTRY="${REPOSITORY_URI}" -out plan.out
-      - $dockerterraform apply -var ECR_REGISTRY="${REPOSITORY_URI}" -auto-approve
+      - $dockerterraform plan -var ECR_REGISTRY="${REPOSITORY_URI}" -var STAGE="${STAGE}" -out plan.out
+      - $dockerterraform apply -var ECR_REGISTRY="${REPOSITORY_URI}" -var STAGE="${STAGE}" -auto-approve
       - elb=$($dockerterraform output elb_public)
       - echo $elb >> elb.txt
   post_build:
